softmax loss backpropagation not done

--- a/Snippets.ipynb
+++ b/Snippets.ipynb
@@ -1,58 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1000\n",
-      "500\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "600"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "class hoge:\n",
-    "    def __init__(self, x):\n",
-    "        self._a = x\n",
-    "\n",
-    "class fuga(hoge):\n",
-    "    def __init__(self, x):\n",
-    "        super().__init__(x)\n",
-    "\n",
-    "    @property\n",
-    "    def a(self):\n",
-    "        return self._a * 100\n",
-    "    \n",
-    "    @a.setter\n",
-    "    def a(self, x):\n",
-    "        self._a //= x\n",
-    "    \n",
-    "    def __add__(self, x):\n",
-    "        self._a += x\n",
-    "\n",
-    "aa = fuga(10)\n",
-    "print(aa.a)\n",
-    "aa.a = 2\n",
-    "print(aa.a)\n",
-    "aa + 1\n",
-    "aa.a"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "collapsed": true
@@ -283,6 +231,41 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class hoge:\n",
+    "    def __init__(self, x):\n",
+    "        self._a = x\n",
+    "\n",
+    "class fuga(hoge):\n",
+    "    def __init__(self, x):\n",
+    "        super().__init__(x)\n",
+    "\n",
+    "    @property\n",
+    "    def a(self):\n",
+    "        return self._a * 100\n",
+    "    \n",
+    "    @a.setter\n",
+    "    def a(self, x):\n",
+    "        self._a //= x\n",
+    "    \n",
+    "    def __add__(self, x):\n",
+    "        self._a += x\n",
+    "\n",
+    "aa = fuga(10)\n",
+    "print(aa.a)\n",
+    "aa.a = 2\n",
+    "print(aa.a)\n",
+    "aa + 1\n",
+    "aa.a"
+   ]
   }
  ],
  "metadata": {
