--- a/math_proofs.ipynb
+++ b/math_proofs.ipynb
@@ -27,7 +27,7 @@
    },
    "source": [
     "$$ \n",
-    "p = \\frac{1}{1+\\exp(-x)} \\quad  => \\quad \\exp(-x) = \\frac{1}{p}-1\n",
+    "p = \\frac{1}{1+\\exp(-x)} \\quad \\Rightarrow \\quad \\exp(-x) = \\frac{1}{p}-1\n",
     "$$"
    ]
   },
@@ -38,7 +38,7 @@
    },
    "source": [
     "$$ \n",
-    "=> \\quad x = -\\log(\\frac{1}{p}-1) \\quad = \\quad -\\log(\\frac{1-p}{p}) \\quad = \\quad \\log(\\frac{p}{1-p}) \\quad = \\quad \\log(p) - \\log(1-p)\n",
+    "\\Rightarrow \\quad x = -\\log(\\frac{1}{p}-1) \\quad = \\quad -\\log(\\frac{1-p}{p}) \\quad = \\quad \\log(\\frac{p}{1-p}) \\quad = \\quad \\log(p) - \\log(1-p)\n",
     "$$"
    ]
   },
@@ -201,6 +201,24 @@
    "source": [
     "$$\n",
     "Cross \\, Entropy \\, Error \\quad L = -\\sum_k t_k\\log(-y_k)\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "-\\frac{t_k}{y_k} \\quad  = \\quad -t_k \\times \\frac{1}{y_k}\\Bigl(= \\frac{\\partial\\log y_k}{\\partial y_k}\\Bigr) \\; \\longleftarrow \\; -1 \\times t_k \\; \\longleftarrow \\; -1 + 0 \\Bigl(= (\\sum_k)' \\Bigr)  \\; \\longleftarrow \\; 1 \\times -1 \\; \\longleftarrow \\; 1 \\Bigl(= \\frac{\\partial L}{\\partial L} \\Bigr)\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "-\\frac{t_k}{y_k} \\\n",
     "$$"
    ]
   },
