--- a/math_proofs.ipynb
+++ b/math_proofs.ipynb
@@ -102,8 +102,7 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\exp(x)' \\quad = \\quad \\exp(x)\\\\\n",
-    "\\log(x)' \\quad = \\quad \\frac{1}{x} \\quad\n",
+    "\\exp(x)' \\quad = \\quad \\exp(x)\n",
     "$$"
    ]
   },
@@ -169,19 +168,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Softmax with Loss differentiation"
+    "#### $\\Bigl(\\log x\\Bigr)' \\quad = \\quad\\frac{1}{x}$"
    ]
   },
   {
@@ -191,7 +181,25 @@
    },
    "source": [
     "$$\n",
-    "Softmax \\quad \\quad \\quad \\quad \\quad y_k = \\frac{\\exp(a_k)}{\\sum_{i=1}^n \\exp(a_i)}\n",
+    "\\lim_{h \\to 0} \\frac{\\log (x+h) - \\log (x)}{h}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Softmax with Loss Partial Derivative"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "$$\n",
+    "Softmax \\quad y_k = \\frac{\\exp(a_k)}{\\sum_{i=1}^n \\exp(a_i)} \\quad \\quad ※\\frac{\\exp(a_k)}{S}\n",
     "$$"
    ]
   },
@@ -200,8 +208,15 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "Cross \\, Entropy \\, Error \\quad L = -\\sum_k t_k\\log(-y_k)\n",
+    "Cross \\, Entropy \\, Error \\quad L = -\\sum_k t_k\\log(y_k)\n",
     "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Loss Partial Derivative "
    ]
   },
   {
@@ -217,8 +232,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Softmax Partial Derivative Branched $\\frac{1}{S}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "$$\n",
-    "-\\frac{t_k}{y_k} \\\n",
+    "\\frac{1}{S} \\Bigl(\\verb|※one_hot_label|\\Bigr) \\; \\longleftarrow \\; -t_k S \\times -\\frac{1}{S^2} \\; \\longleftarrow \\; -\\frac{t_k S}{\\exp(a_k)} \\Bigl(=-\\frac{t_k}{y_k}\\Bigr) \\times \\; \\exp(a_k)\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "#### Softmax Partial Derivative Branched $\\exp(a_k)$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "-\\frac{t_k}{\\exp(a_k)} \\; \\longleftarrow \\; -\\frac{t_k S}{\\exp(a_k)} \\Bigl(=-\\frac{t_k}{y_k}\\Bigr) \\times \\; \\frac{1}{S}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Softmax Partial Derivative Merged"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "y_k - t_k \\; \\longleftarrow \\; (\\frac{1}{S} - \\frac{t_k}{\\exp(a_k)}) \\times \\exp(a_k) \\; \\longleftarrow \\; \\frac{1}{S} + -\\frac{t_k}{\\exp(a_k)}\n",
     "$$"
    ]
   },
