Inverse function diff formula and exp()with naiper diff proof added

--- a/math_proofs.ipynb
+++ b/math_proofs.ipynb
@@ -95,6 +95,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Differentiation Formulas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Inverse Function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\Large y \\large \\; = \\; f(x) \\qquad \\qquad \\quad \\\\\n",
+    "\\Large x \\large \\; = \\; g(y) \\; = \\; g(f(x)) \\; = \\; g \\cdot f\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\large 1(\\small=x'\\large) \\quad = \\; \\frac{d}{dx} g \\cdot f \\; = \\; \\frac{d}{dx} g \\cdot \\frac{dy}{dx}\n",
+    " \\; = \\; \\frac{dx}{dy} \\frac{dy}{dx}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\large \\frac{dy}{dx} \\; = \\; \\frac{1}{\\Large \\frac{dx}{dy}\\large}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\;$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Differentiations with Napier's constant"
    ]
   },
@@ -146,8 +196,8 @@
    "source": [
     "$$\n",
     "\\large\n",
-    "\\lim_{h \\to 0} \\frac{\\log(x+h) - \\log(x)}{h} \\; \\longrightarrow \\; \\lim_{h \\to 0} \\frac{1}{h} \\log(\\frac{x+h}{x})\n",
-    "\\; \\longrightarrow \\; \\lim_{h \\to 0} \\frac{1}{h} \\log(1 + \\frac{h}{x})\n",
+    "\\lim_{h \\to 0} \\frac{\\log(x+h) - \\log(x)}{h} \\quad \\longrightarrow \\quad \\lim_{h \\to 0} \\frac{1}{h} \\log(\\frac{x+h}{x})\n",
+    "\\quad \\longrightarrow \\quad \\lim_{h \\to 0} \\frac{1}{h} \\log(1 + \\frac{h}{x})\n",
     "$$"
    ]
   },
@@ -157,10 +207,10 @@
    "source": [
     "$$\n",
     "\\large\n",
-    "\\; \\longrightarrow \\; \\lim_{h \\to 0} \\frac{1}{xk} \\log(1 + k) \\; \\small \\verb|※| \\; \\frac{h}{x}=k\n",
+    "\\; \\longrightarrow \\quad \\lim_{h \\to 0} \\frac{1}{xk} \\log(1 + k) \\; \\small \\verb|※| \\; \\frac{h}{x}=k \\quad\n",
     "\\large\n",
-    "\\longrightarrow \\; \\lim_{h \\to 0} \\frac{1}{x} \\log(1 + k)^\\frac{1}{k}\n",
-    "\\longrightarrow \\; \\frac{1}{x} \\log e\n",
+    "\\longrightarrow \\quad \\lim_{h \\to 0} \\frac{1}{x} \\log(1 + k)^\\frac{1}{k}\n",
+    "\\longrightarrow \\quad \\frac{1}{x} \\log e\n",
     "$$"
    ]
   },
@@ -175,17 +225,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Exponential function Differentiation $ \\;\\exp(x)' \\; = \\; \\exp(x) $  by Inverse Function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Exponential function Differentiation $ \\;\\exp(x)' \\; = \\; \\exp(x) $"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\large \\lim_{h \\to 0}\\frac{\\exp(x+h)-\\exp(x)}{h} \\quad \\longrightarrow \\quad \\lim_{h \\to 0}\\frac{\\exp(x)(\\exp(h)-1)}{h}\n",
+    "\\quad\n",
+    "\\left\\{※\n",
+    "    \\begin{array}{111}\n",
+    "        \\exp(h)-1 = k\\\\\n",
+    "        h= \\log(k+1)\\\\\n",
+    "        \\lim_{h\\to0} \\rightarrow \\lim_{k\\to0}\n",
+    "    \\end{array}\n",
+    "\\right.\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\large \\quad\\lim_{h\\to0}\\exp(x)\\frac{k}{\\log(k+1)}\\frac{k^{-1}}{k^{-1}}\n",
+    "\\quad \\longrightarrow \\quad \\lim_{k\\to0}\\exp(x)\\frac{1}{\\log(k+1)^{\\frac{1}{k}}}\n",
+    "\\quad \\longrightarrow \\quad \\exp(x)\\frac{1}{\\log e}\n",
+    "$$"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -236,7 +321,7 @@
    "source": [
     "$$\n",
     "\\large\n",
-    "-\\frac{t_k}{y_k} \\quad  = \\quad -t_k \\times \\frac{1}{y_k}\\Bigl(= \\frac{\\partial\\log y_k}{\\partial y_k}\\Bigr) \\; \\longleftarrow \\; -1 \\times t_k \\; \\longleftarrow \\; -1 + 0 \\Bigl(= (\\sum_k)' \\Bigr)  \\; \\longleftarrow \\; 1 \\times -1 \\; \\longleftarrow \\; 1 \\Bigl(= \\frac{\\partial L}{\\partial L} \\Bigr)\n",
+    "-\\frac{t_k}{y_k} \\quad  = \\quad -t_k \\times \\frac{1}{y_k}\\Bigl(\\small= \\frac{\\partial\\log y_k}{\\partial y_k} \\large \\Bigr) \\; \\longleftarrow \\; -1 \\times t_k \\; \\longleftarrow \\; -1 + 0 \\Bigl(\\small= (\\sum_k)' \\large \\Bigr)  \\; \\longleftarrow \\; 1 \\times -1 \\; \\longleftarrow \\; 1 \\Bigl(\\small= \\frac{\\partial L}{\\partial L} \\large \\Bigr)\n",
     "$$"
    ]
   },
@@ -253,7 +338,7 @@
    "source": [
     "$$\n",
     "\\large\n",
-    "\\frac{1}{S} \\Bigl(\\verb|※one_hot_label|\\Bigr) \\; \\longleftarrow \\; -t_k S \\times -\\frac{1}{S^2} \\; \\longleftarrow \\; -\\frac{t_k S}{\\exp(a_k)} \\Bigl(=-\\frac{t_k}{y_k}\\Bigr) \\times \\; \\exp(a_k)\n",
+    "\\frac{1}{S} \\Bigl(\\small\\verb|※one_hot_label| \\large \\Bigr) \\quad \\longleftarrow \\quad -t_k S \\times -\\frac{1}{S^2} \\quad \\longleftarrow \\quad -\\frac{t_k S}{\\exp(a_k)} \\Bigl(\\small=-\\frac{t_k}{y_k} \\large \\Bigr) \\times \\; \\exp(a_k)\n",
     "$$"
    ]
   },
@@ -272,7 +357,7 @@
    "source": [
     "$$\n",
     "\\large\n",
-    "-\\frac{t_k}{\\exp(a_k)} \\; \\longleftarrow \\; -\\frac{t_k S}{\\exp(a_k)} \\Bigl(=-\\frac{t_k}{y_k}\\Bigr) \\times \\; \\frac{1}{S}\n",
+    "-\\frac{t_k}{\\exp(a_k)} \\quad \\longleftarrow \\quad -\\frac{t_k S}{\\exp(a_k)} \\Bigl(\\small=-\\frac{t_k}{y_k} \\large \\Bigr) \\times \\; \\frac{1}{S}\n",
     "$$"
    ]
   },
