Gradient descent against Least Squares Method added

--- a/math_proofs.ipynb
+++ b/math_proofs.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -172,12 +172,13 @@
     }
    ],
    "source": [
+    "# e = ((1+(1/n))**n for n in range(1, 10<<100))\n",
     "def napier(n):\n",
     "    while True:\n",
     "        yield (1+(1/n))**n\n",
     "        n += 3\n",
-    "n = napier(1)\n",
-    "print(next(n), next(n), next(n), next(n))\n",
+    "e = napier(1)\n",
+    "print(next(e), next(e), next(e), next(e))\n",
     "print(napier(100).__next__(), napier(1000).__next__(), napier(10000).__next__())"
    ]
   },
