--- a/math_proofs.ipynb
+++ b/math_proofs.ipynb
@@ -2,12 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "import warnings\n",
+    "warnings.filterwarnings('ignore');\n",
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
     "%matplotlib inline"
