Snippets.ipynb renamed to LinearRegression.ipynb & Log wiz non-base e diff added

--- a/math_proofs.ipynb
+++ b/math_proofs.ipynb
@@ -228,6 +228,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Logarithm with Non-Base e Differentiation $\\Bigl(\\log_a x\\Bigr)' \\; = \\; \\large \\frac{1}{x \\log a}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\large \\log_a x' \\quad = \\quad \\frac{d}{dx}\\frac{\\log_e x}{\\log_e a} \\;=\\; \\frac{1}{x\\log_e a}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\;$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Exponential function Differentiation $ \\;\\exp(x)' \\; = \\; \\exp(x) $  by Inverse Function"
    ]
   },
