LogisticRegression just added, exp diff proof by inverse func added in math_proof

--- a/math_proofs.ipynb
+++ b/math_proofs.ipynb
@@ -104,6 +104,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Fractional Function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\large \\frac{d}{dx}\\frac{f(x)}{g(x)} \\;=\\; \\frac{f(x)'g(x) - f(x)g(x)'}{g(x)^2}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\;$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Inverse Function"
    ]
   },
@@ -252,6 +275,15 @@
    "metadata": {},
    "source": [
     "### Exponential function Differentiation $ \\;\\exp(x)' \\; = \\; \\exp(x) $  by Inverse Function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\large \\exp(x)' \\; = \\; \\frac{1}{(\\log_e exp(x))'} \\; = \\; \\exp(x)\n",
+    "$$"
    ]
   },
   {
