--- a/LinearRegression.ipynb
+++ b/LinearRegression.ipynb
@@ -345,7 +345,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class hoge:\n",
