fractional function diff proof added

--- a/math_proofs.ipynb
+++ b/math_proofs.ipynb
@@ -112,7 +112,44 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\large \\frac{d}{dx}\\frac{f(x)}{g(x)} \\;=\\; \\frac{f(x)'g(x) - f(x)g(x)'}{g(x)^2}\n",
+    "\\large \\frac{d}{dx}\\frac{f(x)}{g(x)} \\;=\\; \\lim_{h\\to0}\\frac{1}{h}\\Bigl(\\frac{f(x+h)}{g(x+h)}-\\frac{f(x)}{g(x)}\\Bigr)\n",
+    "\\; = \\; \\lim_{h\\to0}\\frac{1}{h}\\Bigl(\\frac{f(x+h)g(x)}{g(x+h)g(x)}-\\frac{g(x+h)f(x)}{g(x+h)g(x)}\\Bigr)\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\large \\; = \\; \\lim_{h\\to0}\\frac{1}{h}\\frac{1}{{g(x+h)g(x)}}\\Bigl(f(x+h)g(x)-g(x+h)f(x)\\Bigr)\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\large \\; = \\; \\lim_{h\\to0}\\frac{1}{h}\\frac{1}{{g(x+h)g(x)}}\\Bigl((f(x+h)-f(x))g(x)-f(x)(g(x+h)-g(x))\\Bigr)\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\large \\; = \\; \\lim_{h\\to0}\\frac{1}{{g(x+h)g(x)}}\\Bigl(\\frac{f(x+h)-f(x)}{h}g(x)-f(x)\\frac{g(x+h)-g(x)}{h}\\Bigr)\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\large  \\;=\\; \\frac{f(x)'g(x) - f(x)g(x)'}{g(x)^2}\n",
     "$$"
    ]
   },
@@ -135,8 +172,10 @@
    "metadata": {},
    "source": [
     "$$\n",
+    "\\begin{array}{}\n",
     "\\Large y \\large \\; = \\; f(x) \\qquad \\qquad \\quad \\\\\n",
     "\\Large x \\large \\; = \\; g(y) \\; = \\; g(f(x)) \\; = \\; g \\cdot f\n",
+    "\\end{array}.\n",
     "$$"
    ]
   },
