nth root diff with sqrt proof added in math_proofs.ipynb

--- a/math_proofs.ipynb
+++ b/math_proofs.ipynb
@@ -157,6 +157,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### nth root Function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\large (\\sqrt[n]{x})' \\; = \\; (x^\\frac{1}{n})' \\; = \\; \\frac{1}{n}x^{\\frac{1}{n}-1}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Proof by Square Root"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\large \\lim_{h\\to0}\\frac{\\sqrt{x+h}-\\sqrt{x}}{h} \n",
+    "\\;=\\; \\lim_{h\\to0}\\frac{\\sqrt{x+h}-\\sqrt{x}}{h} \\frac{\\sqrt{x+h}+\\sqrt{x}}{\\sqrt{x+h}+\\sqrt{x}}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\large \\;=\\; \\lim_{h\\to0}\\frac{h}{h(\\sqrt{x+h}+\\sqrt{x})} \n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "$$\\;$$"
    ]
   },
@@ -473,6 +522,23 @@
     "\\large\n",
     "y_k - t_k \\; \\longleftarrow \\; (\\frac{1}{S} - \\frac{t_k}{\\exp(a_k)}) \\times \\exp(a_k) \\; \\longleftarrow \\; \\frac{1}{S} + -\\frac{t_k}{\\exp(a_k)}\n",
     "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.00304421days (263.02sec)\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!cat /proc/uptime | awk '{print $1 /60 /60 /24 \"days (\" $1 \"sec)\"}'"
    ]
   },
   {
