Sigmoid diff added in math_proof.ipynb, Loss func diff, and GD added in LogisticRegression.ipynb

--- a/LogisticRegression.ipynb
+++ b/LogisticRegression.ipynb
@@ -52,7 +52,25 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\large Loss \\;(Cross Entropy) \\; = \\; -\\frac{1}{n}\\sum_{i=0}^n t_i \\log (f(x_i)) + (1-t_i) \\log (1-f(x_i))\n",
+    "\\large Loss \\;(Cross Entropy) \\; = \\; -\\frac{1}{n}\\sum_{i=1}^n t_i \\log (h(x_i)) + (1-t_i) \\log (1-h(x_i))\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loss Function Partial Derivative"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\large \\frac{dLoss}{d\\theta} \\;=\\; \\frac{\\partial Loss}{\\partial Z} \\frac{\\partial Z}{\\partial y}\n",
+    "\\frac{\\partial y}{\\partial h(x_i)}\\frac{\\partial h(x_i)}{\\partial \\theta}\n",
+    "\\qquad Z = \\log(y), \\quad y \\;=\\; 0+h(x_i) \\; | \\; 1-h(x_i)\n",
     "$$"
    ]
   },
@@ -61,7 +79,8 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\large \\frac{dLoss}{dA} \\;=\\;\n",
+    "\\large \\;=\\; -\\Bigl(t_i\\frac{1}{h(x_i)} + (1-t_i)\\frac{1}{1-h(x_i)} \\Bigr)\\times \\frac{\\partial Z}{\\partial y}\n",
+    "\\times \\frac{\\partial y}{\\partial h(x_i)} \\times \\frac{\\partial h(x_i)}{\\partial \\theta}\n",
     "$$"
    ]
   },
@@ -70,7 +89,45 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\large \\frac{dLoss}{dB} \\;=\\;\n",
+    "\\large \\;=\\; -\\Bigl(t_i\\frac{1}{h(x_i)}\\times 1 + (1-t_i)\\frac{1}{1-h(x_i)}\\times -1 \\Bigr)\n",
+    "\\times \\frac{\\partial y}{\\partial h(x_i)} \\times \\frac{\\partial h(x_i)}{\\partial \\theta}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\large \\;=\\; -\\Bigl(t_i\\frac{1}{h(x_i)} - (1-t_i)\\frac{1}{1-h(x_i)} \\Bigr)\\times h(x_i)(1-h(x_i)) \\times x_i\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\large \\;=\\; -\\Bigl(t_i(1-h(x_i)) - (1-t_i)h(x_i) \\Bigr) x_i\n",
+    "\\;=\\; -\\Bigl(t_i - h(x_i) \\Bigr) x_i \\;=\\; \\Bigl(h(x_i) - t_i \\Bigr) x_i\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Gradient Descent"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "$$\n",
+    "\\large \\theta_i \\;=\\; \\theta_i - \\frac{\\alpha}{n} \\sum_{i=1}^{n}\\Bigl(h(x_i) - t_i \\Bigr) x_i \\quad \\small ※ \\alpha=Learning\\; Rate\n",
     "$$"
    ]
   },
