--- a/math_proofs.ipynb
+++ b/math_proofs.ipynb
@@ -198,7 +198,8 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\large \\;=\\; \\lim_{h\\to0}\\frac{h}{h(\\sqrt{x+h}+\\sqrt{x})} \n",
+    "\\large \\;=\\; \\lim_{h\\to0}\\frac{h}{h(\\sqrt{x+h}+\\sqrt{x})}\n",
+    "\\;=\\; \\frac{1}{2\\sqrt{x}}\n",
     "$$"
    ]
   },
@@ -525,20 +526,48 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.00304421days (263.02sec)\r\n"
-     ]
-    }
-   ],
    "source": [
-    "!cat /proc/uptime | awk '{print $1 /60 /60 /24 \"days (\" $1 \"sec)\"}'"
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Sigmoid Partial Derivative"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\large \\Bigl(\\frac{1}{1+\\exp(-x)} \\Bigr)' \\;=\\; \\frac{\\partial S}{\\partial Z}\\frac{\\partial Z}{\\partial y}\\frac{\\partial y}{\\partial x}\n",
+    "\\qquad S = \\frac{1}{1+\\exp(-x)}, \\quad Z \\;=\\; 1+\\exp(-x), \\quad y \\;=\\; -x\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\large -\\frac{1}{(1+\\exp(-x))^2} \\times \\exp(-x) \\times -1 \\;=\\; \\frac{\\exp(-x)}{(1+\\exp(-x))^2}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\large \\; = \\; \\frac{1}{1+\\exp(-x)} \\Bigl(\\frac{1+\\exp(-x)}{1+\\exp(-x)} - \\frac{1}{1+\\exp(-x)} \\Bigr)\n",
+    "\\;=\\; S(1-S)\n",
+    "$$"
    ]
   },
   {
