--- a/math_proofs.ipynb
+++ b/math_proofs.ipynb
@@ -441,7 +441,7 @@
    "source": [
     "$$\n",
     "\\large\n",
-    "Softmax \\quad y_k = \\frac{\\exp(a_k)}{\\sum_{i=1}^n \\exp(a_i)} \\quad \\quad ※\\frac{\\exp(a_k)}{S}\n",
+    "Softmax \\quad y_k = \\frac{\\exp(a_k)}{\\sum_{i=1}^n \\exp(a_i)} \\quad \\quad ※S \\;=\\;\\sum_{i=1}^n \\exp(a_i)\\;, \\quad f \\; = \\; \\exp(a_k)\n",
     "$$"
    ]
   },
@@ -476,7 +476,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Softmax Partial Derivative Branched $\\frac{1}{S}$"
+    "#### Softmax Partial Derivative "
    ]
   },
   {
@@ -484,27 +484,8 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\large\n",
-    "\\frac{1}{S} \\Bigl(\\small\\verb|※one_hot_label| \\large \\Bigr) \\quad \\longleftarrow \\quad -t_k S \\times -\\frac{1}{S^2} \\quad \\longleftarrow \\quad -\\frac{t_k S}{\\exp(a_k)} \\Bigl(\\small=-\\frac{t_k}{y_k} \\large \\Bigr) \\times \\; \\exp(a_k)\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "#### Softmax Partial Derivative Branched $\\exp(a_k)$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "\\large\n",
-    "-\\frac{t_k}{\\exp(a_k)} \\quad \\longleftarrow \\quad -\\frac{t_k S}{\\exp(a_k)} \\Bigl(\\small=-\\frac{t_k}{y_k} \\large \\Bigr) \\times \\; \\frac{1}{S}\n",
+    "\\large \\frac{\\partial y_k}{\\partial a_k} \\; = \\; \\frac{f'S - fS'}{S^2}\n",
+    "\\;=\\; \\frac{\\exp(a_k)S - \\exp(a_k)\\times 1}{S^2}\n",
     "$$"
    ]
   },
@@ -512,7 +493,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Softmax Partial Derivative Merged"
+    "$$\n",
+    "\\large \\;=\\; \\frac{\\exp(a_k)}{S} - \\frac{\\exp(a_k)}{S^2}\n",
+    "\\;=\\; y_k (1 \\;- y_k)\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Loss with Softmax Partial Derivative"
    ]
   },
   {
@@ -520,8 +511,7 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\large\n",
-    "y_k - t_k \\; \\longleftarrow \\; (\\frac{1}{S} - \\frac{t_k}{\\exp(a_k)}) \\times \\exp(a_k) \\; \\longleftarrow \\; \\frac{1}{S} + -\\frac{t_k}{\\exp(a_k)}\n",
+    "\\large y_k (1 \\;- y_k) \\times -\\frac{t_k}{y_k} \\;=\\; y_k - t_k\n",
     "$$"
    ]
   },
