in math_proofs, log_a x = log_e x / log_e a proof added

--- a/math_proofs.ipynb
+++ b/math_proofs.ipynb
@@ -234,8 +234,7 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\large 1(\\small=x'\\large) \\quad = \\; \\frac{d}{dx} g \\cdot f \\; = \\; \\frac{d}{dx} g \\cdot \\frac{dy}{dx}\n",
-    " \\; = \\; \\frac{dx}{dy} \\frac{dy}{dx}\n",
+    "\\large 1(\\small=x'\\large) \\quad = \\; g' \\cdot f'\\; = \\; \\frac{dx}{dy} \\frac{dy}{dx}\n",
     "$$"
    ]
   },
@@ -356,7 +355,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\;$"
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\large ※ \\; \\log_a x = y \\; \\longrightarrow \\; a^y = x \\; \\longrightarrow \\; \\log_e a^y = y\\log_e a = \\log_e x \\; \\longrightarrow \\; y = \\frac{\\log_e x}{\\log_e a}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " "
    ]
   },
   {
