[fix/refine] wrong parts in Softmax with Loss, remove no longer necessary

--- a/math_proofs.ipynb
+++ b/math_proofs.ipynb
@@ -104,66 +104,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Fractional Function"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "\\large \\frac{d}{dx}\\frac{f(x)}{g(x)} \\;=\\; \\lim_{h\\to0}\\frac{1}{h}\\Bigl(\\frac{f(x+h)}{g(x+h)}-\\frac{f(x)}{g(x)}\\Bigr)\n",
-    "\\; = \\; \\lim_{h\\to0}\\frac{1}{h}\\Bigl(\\frac{f(x+h)g(x)}{g(x+h)g(x)}-\\frac{g(x+h)f(x)}{g(x+h)g(x)}\\Bigr)\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "\\large \\; = \\; \\lim_{h\\to0}\\frac{1}{h}\\frac{1}{{g(x+h)g(x)}}\\Bigl(f(x+h)g(x)-g(x+h)f(x)\\Bigr)\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "\\large \\; = \\; \\lim_{h\\to0}\\frac{1}{h}\\frac{1}{{g(x+h)g(x)}}\\Bigl((f(x+h)-f(x))g(x)-f(x)(g(x+h)-g(x))\\Bigr)\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "\\large \\; = \\; \\lim_{h\\to0}\\frac{1}{{g(x+h)g(x)}}\\Bigl(\\frac{f(x+h)-f(x)}{h}g(x)-f(x)\\frac{g(x+h)-g(x)}{h}\\Bigr)\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "\\large  \\;=\\; \\frac{f(x)'g(x) - f(x)g(x)'}{g(x)^2}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    " "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### nth root Function"
    ]
   },
@@ -214,50 +154,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Inverse Function"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "\\begin{array}{}\n",
-    "\\Large y \\large \\; = \\; f(x) \\qquad \\qquad \\quad \\\\\n",
-    "\\Large x \\large \\; = \\; g(y) \\; = \\; g(f(x)) \\; = \\; g \\cdot f\n",
-    "\\end{array}.\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "\\large 1(\\small=x'\\large) \\quad = \\; g' \\cdot f'\\; = \\; \\frac{dx}{dy} \\frac{dy}{dx}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "\\large \\frac{dy}{dx} \\; = \\; \\frac{1}{\\Large \\frac{dx}{dy}\\large}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$\\;$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Differentiations with Napier's constant"
    ]
   },
@@ -299,63 +195,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Logarithm Differentiation $\\Bigl(\\log x\\Bigr)' \\; = \\; \\large \\frac{1}{x}$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "$$\n",
-    "\\large\n",
-    "\\lim_{h \\to 0} \\frac{\\log(x+h) - \\log(x)}{h} \\quad \\longrightarrow \\quad \\lim_{h \\to 0} \\frac{1}{h} \\log(\\frac{x+h}{x})\n",
-    "\\quad \\longrightarrow \\quad \\lim_{h \\to 0} \\frac{1}{h} \\log(1 + \\frac{h}{x})\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "\\large\n",
-    "\\; \\longrightarrow \\quad \\lim_{h \\to 0} \\frac{1}{xk} \\log(1 + k) \\; \\small \\verb|※| \\; \\frac{h}{x}=k \\quad\n",
-    "\\large\n",
-    "\\longrightarrow \\quad \\lim_{h \\to 0} \\frac{1}{x} \\log(1 + k)^\\frac{1}{k}\n",
-    "\\longrightarrow \\quad \\frac{1}{x} \\log e\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$\\;$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Logarithm with Non-Base e Differentiation $\\Bigl(\\log_a x\\Bigr)' \\; = \\; \\large \\frac{1}{x \\log a}$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "\\large \\log_a x' \\quad = \\quad \\frac{d}{dx}\\frac{\\log_e x}{\\log_e a} \\;=\\; \\frac{1}{x\\log_e a}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    " "
    ]
   },
   {
@@ -403,48 +243,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exponential function Differentiation $ \\;\\exp(x)' \\; = \\; \\exp(x) $"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "\\large \\lim_{h \\to 0}\\frac{\\exp(x+h)-\\exp(x)}{h} \\quad \\longrightarrow \\quad \\lim_{h \\to 0}\\frac{\\exp(x)(\\exp(h)-1)}{h}\n",
-    "\\quad\n",
-    "\\left\\{※\n",
-    "    \\begin{array}{111}\n",
-    "        \\exp(h)-1 = k\\\\\n",
-    "        h= \\log(k+1)\\\\\n",
-    "        \\lim_{h\\to0} \\rightarrow \\lim_{k\\to0}\n",
-    "    \\end{array}\n",
-    "\\right.\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "\\large \\quad\\lim_{h\\to0}\\exp(x)\\frac{k}{\\log(k+1)}\\frac{k^{-1}}{k^{-1}}\n",
-    "\\quad \\longrightarrow \\quad \\lim_{k\\to0}\\exp(x)\\frac{1}{\\log(k+1)^{\\frac{1}{k}}}\n",
-    "\\quad \\longrightarrow \\quad \\exp(x)\\frac{1}{\\log e}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$\\;$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Softmax with Loss Partial Derivative"
    ]
   },
@@ -456,7 +254,7 @@
    "source": [
     "$$\n",
     "\\large\n",
-    "Softmax \\quad y_k = \\frac{\\exp(a_k)}{\\sum_{i=1}^n \\exp(a_i)} \\quad \\quad ※S \\;=\\;\\sum_{i=1}^n \\exp(a_i)\\;, \\quad f \\; = \\; \\exp(a_k)\n",
+    "Softmax \\quad y_k = \\frac{\\exp(a_k)}{\\sum_{i=1}^n \\exp(a_i)} \\quad \\quad =>\\; S \\;=\\;\\sum_{i=1}^n \\exp(a_i)\\;, \\quad f \\; = \\; \\exp(a_k)\n",
     "$$"
    ]
   },
@@ -466,7 +264,7 @@
    "source": [
     "$$\n",
     "\\large\n",
-    "Cross \\, Entropy \\, Error \\quad L = -\\sum_k t_k\\log(y_k)\n",
+    "Categorical \\, Cross \\, Entropy \\, Error \\quad L = -\\frac{1}{n}\\sum_{i=1}^n t_i\\log(y_i)\n",
     "$$"
    ]
   },
@@ -474,7 +272,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Loss Partial Derivative "
+    "$$\n",
+    "\\large\n",
+    "Binary \\, Cross \\, Entropy \\, Error \\quad L = -\\frac{1}{n}\\sum_{i=1}^n \\{t_i\\log(y_i) + (1 - t_i)\\log(1 - y_i)\\}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Loss(Categorical) Partial Derivative "
    ]
   },
   {
@@ -491,6 +299,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Loss(Binary) Partial Derivative "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\large \\frac{y_k - t_k}{y_k (1 - y_k)} \\quad = \\quad - \\{t_k\\log(y_k) + (1 - t_k)\\log(1 - y_k)\\}\\; \\longrightarrow \\;\n",
+    "-\\;\\Bigl(\\frac{t_k}{y_k} + \\frac{1 - t_k}{1 - y_k}\\times(-1)\\Bigr)\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Softmax Partial Derivative "
    ]
   },
@@ -499,8 +324,8 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\large \\frac{\\partial y_k}{\\partial a_k} \\; = \\; \\frac{f'S - fS'}{S^2}\n",
-    "\\;=\\; \\frac{\\exp(a_k)S - \\exp(a_k)\\times 1}{S^2}\n",
+    "\\large \\frac{\\partial y_k}{\\partial a_i} \\; = \\; \\frac{f'S - fS'}{S^2}\n",
+    "\\;=\\; \\frac{0 \\times S - \\exp(a_k)\\exp(a_i)}{S^2}\\;=\\; - y_k y_i\\;=y_k (0 \\;- y_i) \\quad \\in \\quad a_k \\ne a_i\n",
     "$$"
    ]
   },
@@ -509,8 +334,10 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\large \\;=\\; \\frac{\\exp(a_k)}{S} - \\frac{\\exp(a_k)}{S^2}\n",
+    "\\large \\large \\frac{\\partial y_k}{\\partial a_i} \\;=\\; \\frac{\\exp(a_k)S - \\exp(a_k)S'}{S^2}\n",
+    "\\;=\\; \\frac{\\exp(a_k)}{S}(1 - \\frac{exp(a_k)}{S})\n",
     "\\;=\\; y_k (1 \\;- y_k)\n",
+    "\\quad \\in \\quad a_k = a_i\n",
     "$$"
    ]
   },
@@ -518,7 +345,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Loss with Softmax Partial Derivative"
+    "$$\n",
+    "\\large \\sum_{i=1}^n \\frac{\\partial y_k}{\\partial a_i} \n",
+    "\\;=\\; y_k \\sum_{i=1}^n (I_i - y_i)\n",
+    " \\quad \\quad => I \\;=\\; Identity\\;Matrix\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Loss(Categorical) with Softmax Partial Derivative"
    ]
   },
   {
@@ -526,7 +364,60 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\large y_k (1 \\;- y_k) \\times -\\frac{t_k}{y_k} \\;=\\; y_k - t_k\n",
+    "\\large \\quad a_k \\ne a_i\\quad => \\quad - y_k y_i\\;\\times -\\frac{t_k}{y_k} \\;=\\; t_k y_i\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\large \\quad a_k = a_i\\quad => \\quad y_k (1 - y_k)\\;\\times -\\frac{t_k}{y_k} \\;=\\; t_k(y_k - 1)\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\large y_k(I_{ki} - y_i) \\times -\\frac{t_k}{y_k} \\;=\\; t_k(y_i - I_{i})\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Loss(Binary ) with Softmax Partial Derivative  <font color=\"Red\">(Binary Cross Entropy should be used with Sigmoid)</font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\large \\quad a_k \\ne a_i\\quad => \\quad - y_k y_i\\;\\times \\frac{t_k - y_k}{y_k (1 - y_k)}\n",
+    "\\; =\\; \\frac{y_i(y_k - t_k)}{1 - y_k}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\large \\quad a_k = a_i\\quad => \\quad y_k (1 - y_k)\\;\\times \\frac{y_k - t_k}{y_k (1 - y_k)} \\;=\\; y_k - t_k\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\large y_k \\sum_{i=1}^n (I_i - y_i) \\times \\frac{y_k - t_k}{y_k (1 - y_k)} \\;=\\; \\frac{(t_k - y_k)}{1 - y_k} \\sum_{i=1}^n (y_i - I_i)\n",
     "$$"
    ]
   },
