--- a/math_functions.ipynb
+++ b/math_functions.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import warnings\n",
@@ -47,17 +45,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def sigmoid(x):\n",
     "    return 1 / (1 + np.exp(-x))\n",
     "\n",
     "def logit(p):\n",
-    "    return np.log(p /(1 - p))"
+    "    return np.log(p /(1 - p))\n",
+    "\n",
+    "def relu(x):\n",
+    "    return np.maximum(0, x)\n",
+    "\n",
+    "def softmax(x):\n",
+    "    if x.ndim == 1:\n",
+    "        x -= np.max(x) # scale down\n",
+    "        x = np.exp(x)\n",
+    "        return x / np.sum(x)\n",
+    "\n",
+    "    if x.ndim == 2: # batch\n",
+    "        x -= x.max(axis=1, keepdims=True)\n",
+    "        x = np.exp(x)\n",
+    "        return x / x.sum(axis=1, keepdims=True)\n",
+    "        "
    ]
   },
   {
@@ -97,73 +108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Differentiation Formulas"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### nth root Function"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "\\large (\\sqrt[n]{x})' \\; = \\; (x^\\frac{1}{n})' \\; = \\; \\frac{1}{n}x^{\\frac{1}{n}-1}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Proof by Square Root"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "\\large \\lim_{h\\to0}\\frac{\\sqrt{x+h}-\\sqrt{x}}{h} \n",
-    "\\;=\\; \\lim_{h\\to0}\\frac{\\sqrt{x+h}-\\sqrt{x}}{h} \\frac{\\sqrt{x+h}+\\sqrt{x}}{\\sqrt{x+h}+\\sqrt{x}}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "\\large \\;=\\; \\lim_{h\\to0}\\frac{h}{h(\\sqrt{x+h}+\\sqrt{x})}\n",
-    "\\;=\\; \\frac{1}{2\\sqrt{x}}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\\;$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Differentiations with Napier's constant"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "\\Large e \\large \\; = \\; \\lim_{n \\to \\infty}(1+\\frac{1}{n})^n \\quad or \\quad \\lim_{n \\to 0}(1+n)^\\frac{1}{n}\n",
-    "$$"
    ]
   },
   {
@@ -195,48 +140,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Logarithm with Non-Base e Differentiation $\\Bigl(\\log_a x\\Bigr)' \\; = \\; \\large \\frac{1}{x \\log a}$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "\\large ※ \\; \\log_a x = y \\; \\longrightarrow \\; a^y = x \\; \\longrightarrow \\; \\log_e a^y = y\\log_e a = \\log_e x \\; \\longrightarrow \\; y = \\frac{\\log_e x}{\\log_e a}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     " "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Exponential function Differentiation $ \\;\\exp(x)' \\; = \\; \\exp(x) $  by Inverse Function"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "\\large \\exp(x)' \\; = \\; \\frac{1}{(\\log_e exp(x))'} \\; = \\; \\exp(x)\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "\n"
    ]
   },
   {
@@ -492,7 +396,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
